# income-stream-1

back/: main.py  pyproject.toml  requirements.txt
front/: admin.html  app.html  index.html  page.html
