l[tool.poetry]
name = "atsproof"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
anthropic = "*"
pdfplumber = "*"
python-multipart = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"